fix: search input content alignment

--- a/src/components/SearchInput/SearchInput.module.css
+++ b/src/components/SearchInput/SearchInput.module.css
@@ -7,6 +7,7 @@
 .inputWrapper {
   position: relative;
   display: flex;
+  align-items: center;
 }
 
 .searchInput {
@@ -34,6 +35,7 @@
   max-width: 15rem;
   width: 100%;
   justify-content: center;
+  align-items: center;
   color: var(--color-text-light);
 }
 
